os-files/kustomize/overlays/docker/at/routes/mail-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mail
spec:
  host: mail-at-kustomize.apps.org-env-0.org.innovateuk.ukri.org
  port:
    targetPort: 4443-tcp
  tls:
    termination: passthrough
  to:
    kind: Service
    name: mail
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
      host: mail-at-kustomize.apps.org-env-0.org.innovateuk.ukri.org
      routerName: router
      wildcardPolicy: None
